feat: add README and Optimize
add README and Update files

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <div class="row">
                                 <div class="form-group style-border2 col-md-6 position-relative">
                                     <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
-                                    <small id="emailError" class="text-danger d-none">Por favor, insira um endereço de e-mail válido.</small>
+                                    <small id="emailError" class="text-danger d-none">Por favor, insira um e-mail válido.</small>
                                   </div>
                                   
                                   <div class="form-group style-border2 col-md-6 position-relative">
