--- a/register.html
+++ b/register.html
@@ -56,8 +56,8 @@
                                     <input type="text" class="form-control" name="name" id="name" placeholder="Nome de utilizador" required>
                                 </div>
                                 <div class="form-group style-border2 col-md-6">
-                                    <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
-                                    <small id="emailError" class="text-danger d-none">Por favor, insira um endereço de e-mail válido.</small>
+                                    <input type="email" class="form-control" name="email" id="email" placeholder="Email" onblur="validateEmail()" required>
+                                    <small id="emailError" class="text-danger d-none">Por favor, insira um email válido.</small>
                                 </div>
                                 <div class="form-group style-border2 col-md-6 position-relative">
                                     <input type="password" class="form-control" name="password" id="password" placeholder="Senha" required>
@@ -120,18 +120,31 @@
             toggleButton.textContent = isPassword ? "🙈" : "👁️";
         }
 
+        function validateEmail() {
+            const email = document.getElementById("email").value;
+            const emailError = document.getElementById("emailError");
+            const emailRegex = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
+
+            if (!emailRegex.test(email)) {
+                emailError.classList.remove("d-none");
+            } else {
+                emailError.classList.add("d-none");
+            }
+        }
+
         function validateRegisterForm() {
             const email = document.getElementById("email").value;
+            const emailError = document.getElementById("emailError");
             const password = document.getElementById("password").value;
             const checkPassword = document.getElementById("checkpassword").value;
-            const emailError = document.getElementById("emailError");
             const passwordError = document.getElementById("passwordError");
             const passwordMatchError = document.getElementById("passwordMatchError");
             const successMessage = document.getElementById("successMessage");
 
             let isValid = true;
 
-            const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+            // Verifica o email
+            const emailRegex = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
             if (!emailRegex.test(email)) {
                 emailError.classList.remove("d-none");
                 isValid = false;
@@ -139,6 +152,7 @@
                 emailError.classList.add("d-none");
             }
 
+            // Verifica a senha
             if (password.length < 6) {
                 passwordError.classList.remove("d-none");
                 isValid = false;
@@ -146,6 +160,7 @@
                 passwordError.classList.add("d-none");
             }
 
+            // Verifica se as senhas coincidem
             if (password !== checkPassword) {
                 passwordMatchError.classList.remove("d-none");
                 isValid = false;
@@ -153,8 +168,9 @@
                 passwordMatchError.classList.add("d-none");
             }
 
+            // Se todas as validações passarem, exibe a mensagem de sucesso
             if (isValid) {
-                alert("Cadastro realizado com sucesso!")
+                alert("Cadastro realizado com sucesso!");
                 successMessage.classList.remove("d-none");
             } else {
                 successMessage.classList.add("d-none");
